l4/1 - db conn & 1st migration

--- a/StepItUp/appsettings.json
+++ b/StepItUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StepItUp-a89ab6e4-7313-4e1c-9a51-e22bb1145a9e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:gc123456789.database.windows.net,1433;Initial Catalog=stepitup;Persist Security Info=False;User ID=gc123456789;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
