Configured google auth

--- a/StepItUp/appsettings.json
+++ b/StepItUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:gc123456789.database.windows.net,1433;Initial Catalog=stepitup;Persist Security Info=False;User ID=gc123456789;Password=Summer2@25;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "<secret>"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "<secret>",
+      "ClientSecret": "<secret>"
+    }
+  }
 }
