--- a/StepItUp/appsettings.json
+++ b/StepItUp/appsettings.json
@@ -14,5 +14,11 @@
       "ClientId": "<secret>",
       "ClientSecret": "<secret>"
     }
+  },
+  "Payments": {
+    "Stripe": {
+      "PublishableKey": "<secret>",
+      "SecretKey": "<secret>"
+    }
   }
 }
